# conduit_event_logger

./: .gitignore  ConduitEventLogger  conduitEventLogger.cabal
src/: Config.hs  Main.hs  Notification.hs  Store.hs
