name:                ConduitEventLogger
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license:             AllRightsReserved
author:              Alex Babkin
maintainer:          ababkin@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8

executable ConduitEventLogger
  hs-source-dirs: src
  main-is:        Main.hs
  -- main-is:        Example.hs

  -- -O option optimizes code but compilation takes longer
  -- ghc-options:    -O3 -Wall -threaded
  ghc-options:    -Wall
  -- -threaded -with-rtsopts=-N1
  build-depends:
      base >= 4 && <= 5
    , mtl
    , containers
    , aeson
    , text
    , persistent-postgresql         >= 1.3        && < 1.4
    , persistent-sqlite             >= 1.3        && < 1.4
    , persistent                    >= 1.3        && < 1.4
    , persistent-template           >= 1.3        && < 1.4
    , template-haskell
    , lens
    , conduit
    , network-conduit
    , bytestring


