name:                ConduitEventLogger
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license:             AllRightsReserved
author:              Alex Babkin
maintainer:          ababkin@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.10

executable ConduitEventLogger
  default-language: Haskell2010
  hs-source-dirs: src
  main-is:        Main.hs
  -- main-is:        Example.hs

  -- -O option optimizes code but compilation takes longer
  -- ghc-options:    -O3 -Wall -threaded
  ghc-options:    -Wall
  -- -threaded -with-rtsopts=-N1
  build-depends:       
      base                          >= 4.7        && < 4.8
    , mtl                           >= 2.1.3
    , transformers                  >= 0.3.0
    , network                       >= 2.4.2
    , template-haskell              >= 2.9.0
    , containers                    >= 0.5.5
    , aeson                         >= 0.7.0.3
    , bytestring                    >= 0.10.4
    , text                          >= 1.1.0
    , persistent-postgresql         >= 1.3        && < 1.4
    , persistent-sqlite             >= 1.3        && < 1.4
    , persistent                    >= 1.3        && < 1.4
    , persistent-template           >= 1.3        && < 1.4
    , lens                          >= 4.1.2
    , conduit                       >= 1.1.0
    , conduit-extra                 >= 1.1.0
    , attoparsec-conduit            >= 1.1.0
    , extensible-exceptions


